# MEH_masterMind

./: .gitignore  CMakeLists.txt  README.md  main.cpp  results.txt  testing.sh
MasterMind/: MasterMind.cpp  MasterMind.h
MasterMindSolution/: MasterMind_BF.cpp  MasterMind_BF.h  MasterMind_annealing.cpp  MasterMind_annealing.h  MasterMind_genetic.cpp  MasterMind_genetic.h  MasterMind_hillClimbing.cpp  MasterMind_hillClimbing.h  MasterMind_hill_climbing.cpp  MasterMind_hill_climbing.h  MasterMind_random.cpp  MasterMind_random.h  MasterMind_tabu.cpp  MasterMind_tabu.h
MasterMindSolution/annealing/: MasterMind_annealing.cpp  MasterMind_annealing.h
MasterMindSolution/bruteForce/: MasterMind_bruteForce.cpp  MasterMind_bruteForce.h
MasterMindSolution/genetic/: MasterMind_genetic.cpp  MasterMind_genetic.h
MasterMindSolution/hillClimbing/: MasterMind_hillClimbing.cpp  MasterMind_hillClimbing.h
MasterMindSolution/random/: MasterMind_random.cpp  MasterMind_random.h
MasterMindSolution/tabu/: MasterMind_tabu.cpp  MasterMind_tabu.h
data/: color.txt  solution.txt
data/experiment/color/: color_25.txt
data/experiment/solve_hillClimbing/: results_solve_hillClimbing_100_30_1000.txt  results_solve_hillClimbing_100_5_1000.txt  results_solve_hillClimbing_10_10_1000.txt  results_solve_hillClimbing_30_25_1000.txt  results_solve_hillClimbing_30_30_1000.txt  results_solve_hillClimbing_5_10_1000.txt  results_solve_hillClimbing_5_30_1000.txt
data/experiment/solve_tabu/: results_solve_tabu_100_10_1000.txt  results_solve_tabu_100_5_1000.txt  results_solve_tabu_10_25_1000.txt  results_solve_tabu_30_30_1000.txt  results_solve_tabu_30_5_1000.txt  results_solve_tabu_5_25_1000.txt  results_solve_tabu_5_30_1000.txt  results_solve_tabu_5_5_1000.txt
experiment/: creatData.sh  main.py
masterMind/: MasterMind.cpp  MasterMind.h
meh_solution/: MasterMind.cpp  MasterMind.h  Meh_solution.cpp  Meh_solution.h
(+50 files in other folders)
